environments/gloo-edge/gateway-api/with-istio-ambient/apps/50-namespace-app/ambient/l4-policy/tier-3-app-a-viewer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: tier-3-app-a-viewer
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: tier-3-app-a
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/client/sa/sleep
        - cluster.local/ns/ns-1/sa/tier-2-app-a
        - cluster.local/ns/ns-2/sa/tier-2-app-a
        - cluster.local/ns/ns-3/sa/tier-2-app-a
        - cluster.local/ns/ns-4/sa/tier-2-app-a
        - cluster.local/ns/ns-5/sa/tier-2-app-a
        - cluster.local/ns/ns-6/sa/tier-2-app-a
        - cluster.local/ns/ns-7/sa/tier-2-app-a
        - cluster.local/ns/ns-8/sa/tier-2-app-a
        - cluster.local/ns/ns-9/sa/tier-2-app-a
        - cluster.local/ns/ns-10/sa/tier-2-app-a
        - cluster.local/ns/ns-11/sa/tier-2-app-a
        - cluster.local/ns/ns-12/sa/tier-2-app-a
        - cluster.local/ns/ns-13/sa/tier-2-app-a
        - cluster.local/ns/ns-14/sa/tier-2-app-a
        - cluster.local/ns/ns-15/sa/tier-2-app-a
        - cluster.local/ns/ns-16/sa/tier-2-app-a
        - cluster.local/ns/ns-17/sa/tier-2-app-a
        - cluster.local/ns/ns-18/sa/tier-2-app-a
        - cluster.local/ns/ns-19/sa/tier-2-app-a
        - cluster.local/ns/ns-20/sa/tier-2-app-a
        - cluster.local/ns/ns-21/sa/tier-2-app-a
        - cluster.local/ns/ns-22/sa/tier-2-app-a
        - cluster.local/ns/ns-23/sa/tier-2-app-a
        - cluster.local/ns/ns-24/sa/tier-2-app-a
        - cluster.local/ns/ns-25/sa/tier-2-app-a
        - cluster.local/ns/ns-26/sa/tier-2-app-a
        - cluster.local/ns/ns-27/sa/tier-2-app-a
        - cluster.local/ns/ns-28/sa/tier-2-app-a
        - cluster.local/ns/ns-29/sa/tier-2-app-a
        - cluster.local/ns/ns-30/sa/tier-2-app-a
        - cluster.local/ns/ns-31/sa/tier-2-app-a
        - cluster.local/ns/ns-32/sa/tier-2-app-a
        - cluster.local/ns/ns-33/sa/tier-2-app-a
        - cluster.local/ns/ns-34/sa/tier-2-app-a
        - cluster.local/ns/ns-35/sa/tier-2-app-a
        - cluster.local/ns/ns-36/sa/tier-2-app-a
        - cluster.local/ns/ns-37/sa/tier-2-app-a
        - cluster.local/ns/ns-38/sa/tier-2-app-a
        - cluster.local/ns/ns-39/sa/tier-2-app-a
        - cluster.local/ns/ns-40/sa/tier-2-app-a
        - cluster.local/ns/ns-41/sa/tier-2-app-a
        - cluster.local/ns/ns-42/sa/tier-2-app-a
        - cluster.local/ns/ns-43/sa/tier-2-app-a
        - cluster.local/ns/ns-44/sa/tier-2-app-a
        - cluster.local/ns/ns-45/sa/tier-2-app-a
        - cluster.local/ns/ns-46/sa/tier-2-app-a
        - cluster.local/ns/ns-47/sa/tier-2-app-a
        - cluster.local/ns/ns-48/sa/tier-2-app-a
        - cluster.local/ns/ns-49/sa/tier-2-app-a
        - cluster.local/ns/ns-50/sa/tier-2-app-a
        - cluster.local/ns/ns-1/sa/tier-2-app-b
        - cluster.local/ns/ns-2/sa/tier-2-app-b
        - cluster.local/ns/ns-3/sa/tier-2-app-b
        - cluster.local/ns/ns-4/sa/tier-2-app-b
        - cluster.local/ns/ns-5/sa/tier-2-app-b
        - cluster.local/ns/ns-6/sa/tier-2-app-b
        - cluster.local/ns/ns-7/sa/tier-2-app-b
        - cluster.local/ns/ns-8/sa/tier-2-app-b
        - cluster.local/ns/ns-9/sa/tier-2-app-b
        - cluster.local/ns/ns-10/sa/tier-2-app-b
        - cluster.local/ns/ns-11/sa/tier-2-app-b
        - cluster.local/ns/ns-12/sa/tier-2-app-b
        - cluster.local/ns/ns-13/sa/tier-2-app-b
        - cluster.local/ns/ns-14/sa/tier-2-app-b
        - cluster.local/ns/ns-15/sa/tier-2-app-b
        - cluster.local/ns/ns-16/sa/tier-2-app-b
        - cluster.local/ns/ns-17/sa/tier-2-app-b
        - cluster.local/ns/ns-18/sa/tier-2-app-b
        - cluster.local/ns/ns-19/sa/tier-2-app-b
        - cluster.local/ns/ns-20/sa/tier-2-app-b
        - cluster.local/ns/ns-21/sa/tier-2-app-b
        - cluster.local/ns/ns-22/sa/tier-2-app-b
        - cluster.local/ns/ns-23/sa/tier-2-app-b
        - cluster.local/ns/ns-24/sa/tier-2-app-b
        - cluster.local/ns/ns-25/sa/tier-2-app-b
        - cluster.local/ns/ns-26/sa/tier-2-app-b
        - cluster.local/ns/ns-27/sa/tier-2-app-b
        - cluster.local/ns/ns-28/sa/tier-2-app-b
        - cluster.local/ns/ns-29/sa/tier-2-app-b
        - cluster.local/ns/ns-30/sa/tier-2-app-b
        - cluster.local/ns/ns-31/sa/tier-2-app-b
        - cluster.local/ns/ns-32/sa/tier-2-app-b
        - cluster.local/ns/ns-33/sa/tier-2-app-b
        - cluster.local/ns/ns-34/sa/tier-2-app-b
        - cluster.local/ns/ns-35/sa/tier-2-app-b
        - cluster.local/ns/ns-36/sa/tier-2-app-b
        - cluster.local/ns/ns-37/sa/tier-2-app-b
        - cluster.local/ns/ns-38/sa/tier-2-app-b
        - cluster.local/ns/ns-39/sa/tier-2-app-b
        - cluster.local/ns/ns-40/sa/tier-2-app-b
        - cluster.local/ns/ns-41/sa/tier-2-app-b
        - cluster.local/ns/ns-42/sa/tier-2-app-b
        - cluster.local/ns/ns-43/sa/tier-2-app-b
        - cluster.local/ns/ns-44/sa/tier-2-app-b
        - cluster.local/ns/ns-45/sa/tier-2-app-b
        - cluster.local/ns/ns-46/sa/tier-2-app-b
        - cluster.local/ns/ns-47/sa/tier-2-app-b
        - cluster.local/ns/ns-48/sa/tier-2-app-b
        - cluster.local/ns/ns-49/sa/tier-2-app-b
        - cluster.local/ns/ns-50/sa/tier-2-app-b
        - cluster.local/ns/ns-1/sa/waypoint
        - cluster.local/ns/ns-2/sa/waypoint
        - cluster.local/ns/ns-3/sa/waypoint
        - cluster.local/ns/ns-4/sa/waypoint
        - cluster.local/ns/ns-5/sa/waypoint
        - cluster.local/ns/ns-6/sa/waypoint
        - cluster.local/ns/ns-7/sa/waypoint
        - cluster.local/ns/ns-8/sa/waypoint
        - cluster.local/ns/ns-9/sa/waypoint
        - cluster.local/ns/ns-10/sa/waypoint
        - cluster.local/ns/ns-11/sa/waypoint
        - cluster.local/ns/ns-12/sa/waypoint
        - cluster.local/ns/ns-13/sa/waypoint
        - cluster.local/ns/ns-14/sa/waypoint
        - cluster.local/ns/ns-15/sa/waypoint
        - cluster.local/ns/ns-16/sa/waypoint
        - cluster.local/ns/ns-17/sa/waypoint
        - cluster.local/ns/ns-18/sa/waypoint
        - cluster.local/ns/ns-19/sa/waypoint
        - cluster.local/ns/ns-20/sa/waypoint
        - cluster.local/ns/ns-21/sa/waypoint
        - cluster.local/ns/ns-22/sa/waypoint
        - cluster.local/ns/ns-23/sa/waypoint
        - cluster.local/ns/ns-24/sa/waypoint
        - cluster.local/ns/ns-25/sa/waypoint
        - cluster.local/ns/ns-26/sa/waypoint
        - cluster.local/ns/ns-27/sa/waypoint
        - cluster.local/ns/ns-28/sa/waypoint
        - cluster.local/ns/ns-29/sa/waypoint
        - cluster.local/ns/ns-30/sa/waypoint
        - cluster.local/ns/ns-31/sa/waypoint
        - cluster.local/ns/ns-32/sa/waypoint
        - cluster.local/ns/ns-33/sa/waypoint
        - cluster.local/ns/ns-34/sa/waypoint
        - cluster.local/ns/ns-35/sa/waypoint
        - cluster.local/ns/ns-36/sa/waypoint
        - cluster.local/ns/ns-37/sa/waypoint
        - cluster.local/ns/ns-38/sa/waypoint
        - cluster.local/ns/ns-39/sa/waypoint
        - cluster.local/ns/ns-40/sa/waypoint
        - cluster.local/ns/ns-41/sa/waypoint
        - cluster.local/ns/ns-42/sa/waypoint
        - cluster.local/ns/ns-43/sa/waypoint
        - cluster.local/ns/ns-44/sa/waypoint
        - cluster.local/ns/ns-45/sa/waypoint
        - cluster.local/ns/ns-46/sa/waypoint
        - cluster.local/ns/ns-47/sa/waypoint
        - cluster.local/ns/ns-48/sa/waypoint
        - cluster.local/ns/ns-49/sa/waypoint
        - cluster.local/ns/ns-50/sa/waypoint
